--- a/_posts/2022-07-30-user2022/user2022.Rmd
+++ b/_posts/2022-07-30-user2022/user2022.Rmd
@@ -74,15 +74,15 @@ Here are my notes from the workshops and some of the talks I attended, in no par
 
 - **Carsten Lange** _A better way to teach histograms, using the TeachHist package_: I love it when a package just aims to do one thing and does that one thing well. `{TeachHist}` is that package - it runs a shiny app that teaches intro stats students the motivation and intuition behind histograms as a data viz tool, and how to read statistical properties of the data off of histograms. Purists will not like the design of the functions in the package (e.g., you have big functions with lots of arguments vs. modules composing a histogram like in `{ggplot2}`) but I really liked how this was designed with non-programmer students in mind.^[Like, do you know what all the possible arguments to `geom_histogram()` is? You probably don't and they're actually pretty hard to find, but you wouldn't have that problem if you had one function with a bunch of arguments that you can find on just the function's help page with no redirects.] I also really liked that the talk live-demoed the package/app, since that also demos the real-world case of when you'd be using it (live, in front of students).
 
-- **Kirsten B. Gorman et al.** _The untold story of `palmerpenguins`_: This talk was actually a call for a lot of self-reflection for me, because to be honest when `{palmerpenguins}` first came out and there was big hype around it on twitter, I didn't understand really understand why. I thought, "it's just a data package," and found the dataset to be underwhelming (as in, it's not exactly a big dataset). Of course, I've done a complete 180° since then and I adore this package now - the data _just works_ for many different kinds of simple reprexes that I make for teaching and answering questions.^[And it has a lot of "data lessons" built-in, like you can use it to demonstrate the Simpson's paradox and k-means clustering.] But also there's the side of the "story of palmerpenguins" that's not at all about the data itself, which was the focus of this talk - the side about the people and the community around this project and all the effort they put in to make `palmerpenguins` dethrone the `iris` dataset and get representation in other big-name places like [tensorflow](https://www.tensorflow.org/datasets/catalog/penguins). Because, you know what? If someone asked me to make a data package go viral I'd have no idea where to even start, and that thought racing past my head while I was listening to this talk was really humbling. I guess that's really what a lot of what making a good data package for pedagogical purposes is, right?^[In fact, one of the really insightful parts of the talk was Alison talking on the slide "Why has it been so popular?".] Its partly about the actual data, but it's also about the framing, the ["marketing"](https://yihui.org/en/2018/12/social-media-marketing/), the cuteness factor of penguins, all the hand-made art, the awesome pkgdown website (which I embarassingly never visited before this talk), and more. The fact that you can get people excited about a data package is insane, and I really liked hearing about all the small-to-big issues the `{palmerpenguins}` team had to think through^[e.g., Adelie is always capitalized because it's named after a person, but optional for chinstraps and gentoos. The data itself capitalizes all of them.]. Like, did you know about `palmerpenguins::path_to_file()` for teaching students how to read in files from a path?
+- **Kirsten B. Gorman et al.** _The untold story of `palmerpenguins`_: This talk was actually a call for a lot of self-reflection for me, because to be honest when `{palmerpenguins}` first came out and there was big hype around it on twitter, I didn't understand really understand why. I thought, "it's just a data package," and found the dataset to be underwhelming (as in, it's not exactly a big dataset). Of course, I've done a complete 180° since then and I adore this package now - the data _just works_ for many different kinds of simple reprexes that I make for teaching and answering questions.^[And it has a lot of "data lessons" built-in, like you can use it to demonstrate the Simpson's paradox and k-means clustering.] But also there's the side of the "story of palmerpenguins" that's not at all about the data itself, which was the focus of this talk - the side about the people and the community around this project and all the effort they put in to make `palmerpenguins` dethrone the `iris` dataset and get representation in other big-name places like [tensorflow](https://www.tensorflow.org/datasets/catalog/penguins). Because, you know what? If someone asked me to make a data package go viral I'd have no idea where to even start, and that thought racing past my head while I was listening to this talk was really humbling. I guess that's really what a lot of what making a good data package for pedagogical purposes is, right?^[In fact, one of the really insightful parts of the talk was Alison talking on the slide "Why has it been so popular?".] Its partly about the actual data, but it's also about the framing, the ["marketing"](https://yihui.org/en/2018/12/social-media-marketing/), the cuteness factor of penguins, all the hand-made art, the awesome pkgdown website,^[Which I embarassingly never visited before this talk.] and more. The fact that you can get people excited about a data package is insane, and I really liked hearing about all the small-to-big issues the `{palmerpenguins}` team had to think through.^[e.g., Adelie is always capitalized because it's named after a person, but optional for chinstraps and gentoos. The data itself capitalizes all of them.] Like, did you know about `palmerpenguins::path_to_file()` for teaching students how to read in files from a path?
 
 ### [Building the R Community 1](https://www.youtube.com/watch?v=_83Beqac5SI&list=PL77T87Q0eoJjvKVFHuJZ5_BGVbPPpB8LL&index=10)
 
-- **Njoki Lucy et al.** _Building an R-Ladies community during the Covid-19 pandemic_: I had been hearing A LOT about the RLadies Nairobi team on twitter (from [Njoki](https://twitter.com/lucy_njokinjuki), [Shel](https://twitter.com/Shel_Kariuki), and others) leading up to this talk, and I've always been super impressed at their efforts. They're so innovative and social-media-savvy despite being a new group. For example, a while back they hosted a Twitter Space (I didn't even know that was a thing before this) and invited [Shannon Pileggi](https://twitter.com/PipingHotData) for a chat, and I attended it and thought it was so impressive and creative - they have practically mastered the art of getting people together online. One big wow moment from the talk was that they apparently started planning the chapter _before_ covid, and had to pivot to starting it online (all in like half a year!).
+- **Njoki Lucy et al.** _Building an R-Ladies community during the Covid-19 pandemic_: I had been hearing A LOT about the RLadies Nairobi team on twitter (from [Njoki](https://twitter.com/lucy_njokinjuki), [Shel](https://twitter.com/Shel_Kariuki), and others) leading up to this talk, and I've always been super impressed at their efforts. They're so innovative and social-media-savvy despite being a new group. For example, a while back they hosted a Twitter Space^[I didn't even know Twitter Space was a thing before this, despite spending a lot of time on Twitter.] and invited [Shannon Pileggi](https://twitter.com/PipingHotData) for a chat. I I attended that and thought it was so impressive and creative - they have practically mastered the art of getting people together online. One big wow moment from the talk was that they apparently started planning the chapter _before_ covid, and had to pivot to starting it online, all in the span of like half a year!
 
 ### [Interfaces with C, C++, Rust, and V](https://www.youtube.com/watch?v=fkXPfDxv3AU&list=PL77T87Q0eoJjvKVFHuJZ5_BGVbPPpB8LL&index=5)
 
-- **David B. Dahl** _Writing R extensions in Rust_: I'm not familiar with any "low level" programming languages, but Rust has been catching my eye recently because a few R folks were doing cool stuff in it (e.g., [`{gifski}`](https://github.com/r-rust/gifski), [`{sinab}`](https://github.com/clauswilke/sinab), [`{string2path}`](https://github.com/yutannihilation/string2path)). As expected, all the technical details of the talk went over my head, but it was well-motivated and I was made aware of the fact that there are competing frameworks for R-Rust interoperability ([`rextender`](https://extendr.github.io/rextendr/) and [`cargo`](https://github.com/dbdahl/cargo-framework)). I wasn't planning on picking up Rust anytime soon, so I guess I'll watch out for a Cran taskview or something.
+- **David B. Dahl** _Writing R extensions in Rust_: I'm not familiar with any "low level" programming languages, but Rust has been catching my eye recently because a few R folks were doing cool stuff in it (e.g., [`{gifski}`](https://github.com/r-rust/gifski), [`{sinab}`](https://github.com/clauswilke/sinab), [`{string2path}`](https://github.com/yutannihilation/string2path)). As expected, all the technical details of the talk went over my head, but it was well-motivated and I was made aware of the fact that there are competing frameworks for R-Rust interoperability ([`rextender`](https://extendr.github.io/rextendr/) and [`cargo`](https://github.com/dbdahl/cargo-framework)). I wasn't planning on picking up Rust anytime soon, so I guess I'll watch out for a CRAN taskview or something.
 
 ### [Expanding Tidyverse](https://www.youtube.com/watch?v=Cv3e-kyu6YA&list=PL77T87Q0eoJhayMV5-dRZHiGPqJVM1WnB&index=11)
 
@@ -96,6 +96,6 @@ Here are my notes from the workshops and some of the talks I attended, in no par
 
 - **Nicola Rennie** _Learning `ggplot2` with generative art_: I LOVED this talk! The talk started with a great point about how it's kinda intimidating/hard for people to get into generative art because you don't just start by copying code for generative art - art is about the _process_, so it doesn't lend itself to how people normally learn things in programming, which is by copying code just to get something working first and then going from there. I totally related to that because that was my case too. I feel more confident about it now, after seeing examples from the talk about how code can inform art and vice-versa. For example, there was a really handy trick of "adding arbitrary layers" in a plot by just adding whole ggplots with transparent backgrounds on top of each other using [`{patchwork}`](https://patchwork.data-imaginist.com/articles/patchwork.html). I'm definitely stealing this idea, for art or not. 
 
-- **James Otto (& David Kahle)** _`ggdensity`: Improved bivariate density visualization in R_: [`{ggdensity}`](https://github.com/jamesotto852/ggdensity) is an example of my favorite kind of packages. It offers a drop-in replacement for a function that improves upon the defaults of a standard function (`ggplot2::geom_density_2d_filled()` -> `ggdensity::geom_hdr()`), while providing additional capabilities that satisfies folks who want/need to do more complicated things. Like I've never thought more than 30 seconds about the design choices of making a density plot - "It's just a density plot, what more do I need?" And then now I'm like "okay I want all of those cool new features." I'm gonna take this moment to put it on record that I actually used `{ggdensity}` the DAY that its CRAN release was announced, to make a plot in a conference proceedings paper which (fingers crossed) will get accepted soon. We got reviews back recently and the reviewers LOVED the plot, so this talk was extra special.
+- **James Otto (& David Kahle)** _`ggdensity`: Improved bivariate density visualization in R_: [`{ggdensity}`](https://github.com/jamesotto852/ggdensity) is an example of my favorite kind of packages. It offers a drop-in replacement for a standard function that improves upon its defaults (from `ggplot2::geom_density_2d_filled()` to `ggdensity::geom_hdr()`), while providing additional capabilities that satisfies folks who want/need to do more complicated things. Like I've never thought more than 30 seconds about the design choices of making a density plot - "It's just a density plot, what more do I need?" And then now I'm like "okay I want all of those cool new features." I'm gonna take this moment to put it on record that I actually used `{ggdensity}` the DAY that its CRAN release was announced, to make a plot in a conference proceedings paper which (fingers crossed) will get accepted soon. We got reviews back recently and the reviewers really liked the plot, so this talk was extra special.
 
 - **Me** _Stepping into `ggplot2` internals with `ggtrace`_: I spoke in this session and here's the repo to the [talk materials](https://github.com/yjunechoe/ggtrace-user2022) if you want to check it out. I don't know what to say for my own talk but I'll just mention that I prepped this talk with the rstudioconf talk in mind, so the two talks touch on different aspects of [`{ggtrace}`](https://yjunechoe.github.io/ggtrace/)/ggplot internals. For this talk, I focused more on giving a walkthrough of how the Stat and Geom ggprotos work under the hood, exposing its functional-programming nature. I'll probably have more to say about `{ggtrace}` when I write my rstudioconf reflection, so stay tuned!
