--- a/research.Rmd
+++ b/research.Rmd
@@ -5,44 +5,55 @@ title: "Research"
 <style>
 p {
   font-family: Roboto;
-  text-align: justify;
 }
 </style>
 
 ## Publications
 
-McWeeny, S., Choi, S. J., **Choe, J.**, LaTourette, A., Roberts, M. Y., & Norton, E. S. (2022). Rapid automatized naming (RAN) as a kindergarten predictor of future reading in English: A systematic review and meta-analysis. _Reading Research Quarterly_. https://doi.org/10.1002/rrq.467
+McWeeny, S., Choi, S. J., **Choe, J.**, LaTourette, A., Roberts, M. Y., & Norton, E. S. (2022). [Rapid automatized naming (RAN) as a kindergarten predictor of future reading in English: A systematic review and meta-analysis](https://doi.org/10.1002/rrq.467). _Reading Research Quarterly_. DOI: 10.1002/rrq.467
 
-**Choe, J.**, Cole, J., and Yoshida, M. (Under review). The role of prosodic focus in the reanalysis of garden path sentences: Depth of semantic processing impedes the revision of an erroneous local analysis. https://doi.org/10.17605/OSF.IO/U6DQ5
+**Choe, J.**, Yoshida, M., and Cole, J. (in press). The role of prosodic focus in the reanalysis of garden path sentences: Depth of semantic processing impedes the revision of an erroneous local analysis. _Glossa Psycholinguistics_. https://doi.org/10.17605/OSF.IO/U6DQ5
+
+## Workshops led
+
+_Experimental syntax using IBEX/PCIBEX_ with Dr. Nayoun Kim. Workshop at the 2022 Seoul International Conference on Linguistics. 11-12 August 2022. Seoul, South Korea.
+
+_An introduction to SnowGlobe, a tool for systematic reviews_ with Dr. Sean McWeeny. Workshop at Northwestern University IT Research Computing Services, 18 May 2021. Evanston, IL.
+
+_Experimental syntax using IBEX: a walkthrough_ with Dr. Nayoun Kim. 2021 BK Winter School-Workshop on Experimental Linguistics/Syntax at Sungkyunkwan University, 19-22 January 2021. Seoul, South Korea.
 
 ## Conference Proceedings
 
-### 2022
-
-**June Choe** and Anna Papafragou. (2022). Acquisition of subordinate nouns as pragmatic inference: Semantic alternatives modulate subordinate meanings. Proceedings of the 44th Annual Cognitive Science Society.
+**Choe, J.**, & Papafragou, A. (2022). [The acquisition of subordinate nouns as pragmatic inference: Semantic alternatives modulate subordinate meanings](https://escholarship.org/uc/item/2m87n4ht). *Proceedings of the Annual Meeting of the Cognitive Science Society*, 44.
 
 May Pik Yu Chan, **June Choe**, Aini Li, Yiran Chen, Xin Gao and Nicole Holliday. (2022). Training and typological bias in ASR performance for world Englishes. Proceedings of Interspeech 2022.
-
 
 ## Conference Presentations
 
 ### 2022
 
-**June Choe**, and Anna Papafragou. *Acquisition of subordinate nouns as pragmatic inference: Semantic alternatives modulate subordinate meanings*. Poster presented at the 2nd Experiments in Linguistic Meaning (ELM) conference.
+**June Choe**, and Anna Papafragou. *Lexical alternatives and the acquisition of subordinate nouns*. Talk at the 47th Boston University Conference on Language Development (BUCLD), 3-6 November, 2022. Boston University, Boston, MA.
 
-**June Choe**, and Anna Papafragou. *Beyond the basic level: Levels of informativeness and the acquisition of subordinate nouns*. Poster presented at the 35th Annual Conference on Human Sentence Processing (HSP), 24-26 March 2022. University of California, Santa Cruz.
+**June Choe**, and Anna Papafragou. *Acquisition of subordinate nouns as pragmatic inference: Semantic alternatives modulate subordinate meanings*. Poster at the 2nd Experiments in Linguistic Meaning (ELM) conference, 18-20 May 2022. University of Pennsylvania, Philadelphia, PA.
+
+**June Choe**, and Anna Papafragou. *Beyond the basic level: Levels of informativeness and the acquisition of subordinate nouns*. Poster at the 35th Annual Conference on Human Sentence Processing (HSP), 24-26 March 2022. University of California, Santa Cruz, CA.
 
 ### 2020
 
-**June Choe**, Jennifer Cole, and Masaya Yoshida. *Prosodic Focus Strengthens Semantic Persistence*. [Poster](static/poster/AMLAP2020.pdf) presented at The 26th Architectures and Mechanisms for Language Processing (AMLaP), 3-5 September 2020. Potsdam, Germany. [Abstract](static/abstract/AMLAP_2020_Abstract.pdf) [Video](https://osf.io/fjkp9/) [Slides](static/slides/AMLAP_2020_Slides.pdf)
+**June Choe**, Jennifer Cole, and Masaya Yoshida. *Prosodic Focus Strengthens Semantic Persistence*. [Poster](static/poster/AMLAP2020.pdf) at The 26th Architectures and Mechanisms for Language Processing (AMLaP), 3-5 September 2020. Potsdam, Germany. [Abstract](static/abstract/AMLAP_2020_Abstract.pdf) [Video](https://osf.io/fjkp9/) [Slides](static/slides/AMLAP_2020_Slides.pdf)
 
-**June Choe**. *Computer-assisted snowball search for meta-analysis research*. [Poster](static/poster/Snowballer_June_Choe.pdf) presented at The 2020 Undergraduate Research & Arts Exposition. 27-28 May 2020. Northwestern University, Evanston, IL. **2nd Place Poster Award**. [Abstract](static/abstract/Expo_2020_Abstract.pdf)
+**June Choe**. *Computer-assisted snowball search for meta-analysis research*. [Poster](static/poster/Snowballer_June_Choe.pdf) at The 2020 Undergraduate Research & Arts Exposition. 27-28 May 2020. Northwestern University, Evanston, IL. **2nd Place Poster Award**. [Abstract](static/abstract/Expo_2020_Abstract.pdf)
 
 ### 2019
 
 **June Choe**. *Social Information in Sentence Processing*. Talk at The 2019 Undergraduate Research & Arts Exposition. 29 May 2019. Northwestern University, Evanston, IL. [Abstract](static/abstract/Expo_2019_Abstract.pdf)
 
-**June Choe**, Shayne Sloggett, Masaya Yoshida and Annette D'Onofrio. *Personae in syntactic processing: Socially-specific agents bias expectations of verb transitivity*. Poster presented at The 32nd CUNY Conference on Human Sentence Processing. 29-31 March 2019. University of Colorado, Boulder, CO.
+**June Choe**, Shayne Sloggett, Masaya Yoshida and Annette D'Onofrio. *Personae in syntactic processing: Socially-specific agents bias expectations of verb transitivity*. Poster at The 32nd CUNY Conference on Human Sentence Processing. 29-31 March 2019. University of Colorado, Boulder, CO.
 
-D’Onofrio, Annette, **June Choe** and Masaya Yoshida. *Personae in syntactic processing: Socially-specific agents bias expectations of verb transitivity*. Poster presented at The 93rd Annual Meeting of the Linguistics Society of America. 3-6 January 2019. New York City, NY.
+D’Onofrio, Annette, **June Choe** and Masaya Yoshida. *Personae in syntactic processing: Socially-specific agents bias expectations of verb transitivity*. Poster at The 93rd Annual Meeting of the Linguistics Society of America. 3-6 January 2019. New York City, NY.
 
+## Non-academic conference activities
+
+June Choe. Cracking open ggplot internals with {gtrace}. Talk at the 2022 RStudio Conference, 25-28 July 2022. Washington D.C.
+
+June Choe. [Stepping into {ggplot2} internals with {ggtrace}](https://www.youtube.com/watch?v=2JX8zu4QxMg&t=2959s). Talk at the 2022 useR! Conference, 20-23 June 2022. Vanderbilt University, TN.
