--- a/research.Rmd
+++ b/research.Rmd
@@ -10,9 +10,9 @@ p {
 
 ## Publications
 
-McWeeny, S., Choi, S. J., **Choe, J.**, LaTourette, A., Roberts, M. Y., & Norton, E. S. (2022). [Rapid automatized naming (RAN) as a kindergarten predictor of future reading in English: A systematic review and meta-analysis](https://doi.org/10.1002/rrq.467). _Reading Research Quarterly_. DOI: 10.1002/rrq.467
+Sean McWeeny, Jinnie S. Choi, **June Choe**, Alexander LaTourette, Megan Y. Roberts, and Elizabeth S. Norton (2022). [Rapid automatized naming (RAN) as a kindergarten predictor of future reading in English: A systematic review and meta-analysis](https://doi.org/10.1002/rrq.467). _Reading Research Quarterly_. DOI: 10.1002/rrq.467
 
-**Choe, J.**, Yoshida, M., and Cole, J. (in press). The role of prosodic focus in the reanalysis of garden path sentences: Depth of semantic processing impedes the revision of an erroneous local analysis. _Glossa Psycholinguistics_. https://doi.org/10.17605/OSF.IO/U6DQ5
+**June Choe**, Masaya Yoshida, and Jennifer Cole (in press). The role of prosodic focus in the reanalysis of garden path sentences: Depth of semantic processing impedes the revision of an erroneous local analysis. _Glossa Psycholinguistics_. https://doi.org/10.17605/OSF.IO/U6DQ5
 
 ## Workshops led
 
@@ -22,17 +22,21 @@ _An introduction to SnowGlobe, a tool for systematic reviews_ with Dr. Sean McWe
 
 _Experimental syntax using IBEX: a walkthrough_ with Dr. Nayoun Kim. 2021 BK Winter School-Workshop on Experimental Linguistics/Syntax at Sungkyunkwan University, 19-22 January 2021. Seoul, South Korea.
 
-## Conference Proceedings
+## Conference Papers
 
-**Choe, J.**, & Papafragou, A. (2022). [The acquisition of subordinate nouns as pragmatic inference: Semantic alternatives modulate subordinate meanings](https://escholarship.org/uc/item/2m87n4ht). *Proceedings of the Annual Meeting of the Cognitive Science Society*, 44.
+**June Choe**, and Anna Papafragou. (2022). [The acquisition of subordinate nouns as pragmatic inference: Semantic alternatives modulate subordinate meanings](https://escholarship.org/uc/item/2m87n4ht). *Proceedings of the Annual Meeting of the Cognitive Science Society*, 44, 2745-2752.
 
-May Pik Yu Chan, **June Choe**, Aini Li, Yiran Chen, Xin Gao and Nicole Holliday. (2022). Training and typological bias in ASR performance for world Englishes. Proceedings of Interspeech 2022.
+May Pik Yu Chan, **June Choe**, Aini Li, Yiran Chen, Xin Gao and Nicole Holliday. (2022). *Training and typological bias in ASR performance for world Englishes*. Proceedings of Interspeech 2022.
+
+## Conference Talks
+
+**June Choe**, and Anna Papafragou. *Lexical alternatives and the acquisition of subordinate nouns*. Talk at the 47th Boston University Conference on Language Development (BUCLD), 3-6 November, 2022. Boston University, Boston, MA.
+
+May Pik Yu Chan, **June Choe**, Aini Li, Yiran Chen, Xin Gao and Nicole Holliday. (2022). *Training and typological bias in ASR performance for world Englishes*. Talk at the 23rd INTERSPEECH Conference, 18-22 September, 2022. Incheon, South Korea.
 
 ## Conference Presentations
 
 ### 2022
-
-**June Choe**, and Anna Papafragou. *Lexical alternatives and the acquisition of subordinate nouns*. Talk at the 47th Boston University Conference on Language Development (BUCLD), 3-6 November, 2022. Boston University, Boston, MA.
 
 **June Choe**, and Anna Papafragou. *Acquisition of subordinate nouns as pragmatic inference: Semantic alternatives modulate subordinate meanings*. Poster at the 2nd Experiments in Linguistic Meaning (ELM) conference, 18-20 May 2022. University of Pennsylvania, Philadelphia, PA.
 
@@ -52,8 +56,8 @@ May Pik Yu Chan, **June Choe**, Aini Li, Yiran Chen, Xin Gao and Nicole Holliday
 
 D’Onofrio, Annette, **June Choe** and Masaya Yoshida. *Personae in syntactic processing: Socially-specific agents bias expectations of verb transitivity*. Poster at The 93rd Annual Meeting of the Linguistics Society of America. 3-6 January 2019. New York City, NY.
 
-## Non-academic conference activities
+## Other conference activities
 
-June Choe. Cracking open ggplot internals with {gtrace}. Talk at the 2022 RStudio Conference, 25-28 July 2022. Washington D.C.
+June Choe. Cracking open ggplot internals with {gtrace}. Talk at the 2022 RStudio Conference, 25-28 July 2022. Washington D.C. [https://github.com/yjunechoe/ggtrace-rstudioconf2022](https://github.com/yjunechoe/ggtrace-rstudioconf2022)
 
-June Choe. [Stepping into {ggplot2} internals with {ggtrace}](https://www.youtube.com/watch?v=2JX8zu4QxMg&t=2959s). Talk at the 2022 useR! Conference, 20-23 June 2022. Vanderbilt University, TN.
+June Choe. [Stepping into {ggplot2} internals with {ggtrace}](https://www.youtube.com/watch?v=2JX8zu4QxMg&t=2959s). Talk at the 2022 useR! Conference, 20-23 June 2022. Vanderbilt University, TN. [https://github.com/yjunechoe/ggtrace-user2022](https://github.com/yjunechoe/ggtrace-user2022)
